# news-notification-system

./: .env.example  .gitignore  README.md  pyproject.toml
config/: keywords.yaml.example  settings.py
data/cache/: notified_urls.json
src/: main.py
src/business/: news_analyzer.py  news_collector.py  notifier.py  summarizer.py
src/infrastructure/: cache_manager.py  google_news_client.py  line_client.py  llm_client.py
src/models/: keyword_config.py  news_article.py  notification.py
src/utils/: date_helper.py  logger.py
tests/: test_cache_manager.py  test_date_helper.py  test_keyword_config.py  test_logger.py  test_news_analyzer.py  test_news_article.py
